; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_command.c_property_print_help.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_command.c_property_print_help.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.MPContext = type { i32, %struct.command_ctx* }
%struct.command_ctx = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @property_print_help(%struct.MPContext* %0) #0 {
  %2 = alloca %struct.MPContext*, align 8
  %3 = alloca %struct.command_ctx*, align 8
  store %struct.MPContext* %0, %struct.MPContext** %2, align 8
  %4 = load %struct.MPContext*, %struct.MPContext** %2, align 8
  %5 = getelementptr inbounds %struct.MPContext, %struct.MPContext* %4, i32 0, i32 1
  %6 = load %struct.command_ctx*, %struct.command_ctx** %5, align 8
  store %struct.command_ctx* %6, %struct.command_ctx** %3, align 8
  %7 = load %struct.MPContext*, %struct.MPContext** %2, align 8
  %8 = getelementptr inbounds %struct.MPContext, %struct.MPContext* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 8
  %10 = load %struct.command_ctx*, %struct.command_ctx** %3, align 8
  %11 = getelementptr inbounds %struct.command_ctx, %struct.command_ctx* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @m_properties_print_help_list(i32 %9, i32 %12)
  ret void
}

declare dso_local i32 @m_properties_print_help_list(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
